--- a/assets/main.css
+++ b/assets/main.css
@@ -1,10 +1,151 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Vazir';
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Vazir";
+}
+:root {
+  --clr-primary: rgb(206, 202, 200);
+  --clr-secondary: rgb(0, 93, 131);
+  --clr-accent: rgb(233, 195, 30);
+  --clr-dark: rgb(58, 62, 61);
 }
 .navbar-brand {
-    width: 100px;
-    height: 50px;
+  width: 100px;
+  height: 50px;
 }
+.costume-nav {
+  background-color: var(--clr-primary);
+  position: relative;
+}
+.costume-nav li a {
+    position: relative;
+    display: block;
+    color: var(--clr-dark);
+    text-align: center;
+    padding: 8px 12px;
+    text-decoration: none;
+    z-index: 0;
+  }
+  .nav-link:focus {
+      color: var(--clr-primary);
+  }
+  .nav-link:hover,
+  .dropdown-item:hover   {
+      color: var(--clr-primary);
+  }
+  
+.costume-nav li a:before {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 100%;
+    bottom: 0;
+    left: 0;
+    background-color: var(--clr-secondary);
+    z-index: -1;
+    transform: scale(0);
+    transition: transform 0.5s ease-in-out;
+  }
+  
+  .costume-nav li a:hover:before,
+  .costume-nav li a:focus:before {
+    transform: scale(1);
+  }
+  
+.vertical-line {
+    width: 1rem;
+    height: 0.1rem;
+    background-color: rgba(0, 0, 0, 0.473);
+    transform: rotate(90deg);
+    margin-top: 1rem;
+}
+.btn {
+  letter-spacing: 0.1em;
+  cursor: pointer;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 30px;
+  max-width: 130px;
+  position: relative;
+  text-decoration: none;
+  text-transform: uppercase;
+  width: 100%;
+}
+.btn:hover {
+  text-decoration: none;
+}
+
+/*btn_background*/
+.effect04 {
+  color: var(--clr-primary);
+  background-color: var(--clr-secondary);
+  /* outline: solid  2px #000; */
+  position: relative;
+  transition-duration: 0.4s;
+  overflow: hidden;
+}
+
+.effect04::before {
+  margin: 0 auto;
+  transition-timing-function: cubic-bezier(0.86, 0, 0.07, 1);
+  transition-duration: 0.4s;
+}
+
+/* 文字1を上に */
+.effect04:hover {
+  transition: none;
+  color: var(--clr-accent);
+  background-color: var(--clr-accent);
+}
+.effect04 span {
+  color: var(--clr-primary);
+}
+
+/* HOVERしたら文字1を上に */
+.effect04:hover span {
+  -webkit-transform: translateY(-400%) scale(-0.1, 20);
+  transform: translateY(-400%) scale(-0.1, 20);
+  color: var(--clr-accent);
+}
+
+/*文字2*/
+.effect04::before {
+  content: attr(data-sm-link-text);
+  color: var(--clr-dark);
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: auto;
+  -webkit-transform: translateY(500%) scale(-0.1, 20);
+  transform: translateY(500%) scale(-0.1, 20);
+}
+
+/* HOVERしたら文字2を上に */
+.effect04:hover::before {
+  letter-spacing: 0.05em;
+  -webkit-transform: translateY(0) scale(1, 1);
+  transform: translateY(0) scale(1, 1);
+}
+.primary-btn {
+  background-color: var(--clr-secondary);
+  color: var(--clr-primary);
+  margin-left: 1rem;
+  letter-spacing: 0.1em;
+  cursor: pointer;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 44px;
+  padding: 0 1rem;
+  border-radius: 4px;
+  position: relative;
+  text-decoration: none;
+  text-transform: uppercase;
+  transition: all ease 0.4s;
+}
+.primary-btn:hover {
+    color: var(--clr-dark);
+    background-color: var(--clr-accent);
+    transition: all ease 0.4s;
+}
+
