--- a/assets/main.css
+++ b/assets/main.css
@@ -4,62 +4,86 @@
   box-sizing: border-box;
   font-family: "Vazir";
 }
+body {
+    overflow-x: hidden;
+}
+
+/* Mobile Screen */
+@media only screen and (min-width: 200px) and (max-width: 991px) {
+  .vertical-line {
+    display: none;
+  }
+  
+  
+}
+/* Variables */
 :root {
   --clr-primary: rgb(206, 202, 200);
   --clr-secondary: rgb(0, 93, 131);
   --clr-accent: rgb(233, 195, 30);
   --clr-dark: rgb(58, 62, 61);
 }
+
+/* Navbar */
 .navbar-brand {
   width: 100px;
   height: 50px;
 }
+.navbar-btns {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 300px;
+  }
 .costume-nav {
   background-color: var(--clr-primary);
   position: relative;
 }
 .costume-nav li a {
-    position: relative;
-    display: block;
-    color: var(--clr-dark);
-    text-align: center;
-    padding: 8px 12px;
-    text-decoration: none;
-    z-index: 0;
-  }
-  .nav-link:focus {
-      color: var(--clr-primary);
-  }
-  .nav-link:hover,
-  .dropdown-item:hover   {
-      color: var(--clr-primary);
-  }
-  
-.costume-nav li a:before {
-    position: absolute;
-    content: "";
-    width: 100%;
-    height: 100%;
-    bottom: 0;
-    left: 0;
-    background-color: var(--clr-secondary);
-    z-index: -1;
-    transform: scale(0);
-    transition: transform 0.5s ease-in-out;
-  }
-  
-  .costume-nav li a:hover:before,
-  .costume-nav li a:focus:before {
-    transform: scale(1);
-  }
-  
-.vertical-line {
-    width: 1rem;
-    height: 0.1rem;
-    background-color: rgba(0, 0, 0, 0.473);
-    transform: rotate(90deg);
-    margin-top: 1rem;
+  position: relative;
+  display: block;
+  color: var(--clr-dark);
+  text-align: center;
+  padding: 8px 12px;
+  text-decoration: none;
+  z-index: 0;
 }
+.nav-link:focus {
+  color: var(--clr-primary);
+}
+.nav-link:hover,
+.dropdown-item:hover {
+  color: var(--clr-primary);
+}
+
+.costume-nav li a:before {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  bottom: 0;
+  left: 0;
+  background-color: var(--clr-secondary);
+  z-index: -1;
+  transform: scale(0);
+  transition: transform 0.5s ease-in-out;
+}
+
+.costume-nav li a:hover:before,
+.costume-nav li a:focus:before {
+  transform: scale(1);
+}
+
+/* Navbar Vertical Line */
+.vertical-line {
+  width: 1rem;
+  height: 0.1rem;
+  background-color: rgba(0, 0, 0, 0.473);
+  transform: rotate(90deg);
+  margin-top: 1rem;
+}
+
+/* Sign Up Button */
 .btn {
   letter-spacing: 0.1em;
   cursor: pointer;
@@ -75,24 +99,18 @@
 .btn:hover {
   text-decoration: none;
 }
-
-/*btn_background*/
 .effect04 {
   color: var(--clr-primary);
   background-color: var(--clr-secondary);
-  /* outline: solid  2px #000; */
   position: relative;
   transition-duration: 0.4s;
   overflow: hidden;
 }
-
 .effect04::before {
   margin: 0 auto;
   transition-timing-function: cubic-bezier(0.86, 0, 0.07, 1);
   transition-duration: 0.4s;
 }
-
-/* 文字1を上に */
 .effect04:hover {
   transition: none;
   color: var(--clr-accent);
@@ -101,15 +119,11 @@
 .effect04 span {
   color: var(--clr-primary);
 }
-
-/* HOVERしたら文字1を上に */
 .effect04:hover span {
   -webkit-transform: translateY(-400%) scale(-0.1, 20);
   transform: translateY(-400%) scale(-0.1, 20);
   color: var(--clr-accent);
 }
-
-/*文字2*/
 .effect04::before {
   content: attr(data-sm-link-text);
   color: var(--clr-dark);
@@ -120,13 +134,14 @@
   -webkit-transform: translateY(500%) scale(-0.1, 20);
   transform: translateY(500%) scale(-0.1, 20);
 }
-
-/* HOVERしたら文字2を上に */
 .effect04:hover::before {
   letter-spacing: 0.05em;
   -webkit-transform: translateY(0) scale(1, 1);
   transform: translateY(0) scale(1, 1);
 }
+
+/* Main Button */
+
 .primary-btn {
   background-color: var(--clr-secondary);
   color: var(--clr-primary);
@@ -135,8 +150,8 @@
   cursor: pointer;
   font-size: 14px;
   font-weight: 600;
-  line-height: 44px;
-  padding: 0 1rem;
+  /* line-height: 44px; */
+  padding: 0.7em 1rem;
   border-radius: 4px;
   position: relative;
   text-decoration: none;
@@ -144,8 +159,134 @@
   transition: all ease 0.4s;
 }
 .primary-btn:hover {
-    color: var(--clr-dark);
-    background-color: var(--clr-accent);
-    transition: all ease 0.4s;
+  color: var(--clr-dark);
+  background-color: var(--clr-accent);
+  transition: all ease 0.4s;
 }
 
+
+/* Hamburger menu */
+
+#menu_button {
+    width: 39px;
+    overflow: hidden;
+  }
+  
+  #menu_checkbox {
+    display: none;
+  }
+  
+  #menu_label {
+    position: relative;
+    display: block;
+    height: 29px;
+    cursor: pointer;
+  }
+  
+  #menu_label:before,
+  #menu_label:after,
+  #menu_text_bar {
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 5px;
+    background-color: var(--clr-dark);
+  }
+  
+  #menu_label:before,
+  #menu_label:after {
+    content: "";
+    transition: 0.4s cubic-bezier(0.68, -0.55, 0.27, 1.55) left;
+  }
+  
+  #menu_label:before {
+    top: 0;
+  }
+  
+  #menu_label:after {
+    top: 12px;
+  }
+  
+  #menu_text_bar {
+    top: 24px;
+  }
+  
+  #menu_text_bar:before {
+    content: "منو";
+    position: absolute;
+    top: 5px;
+    right: 0;
+    left: 0;
+    color: var(--clr-dark);
+    font-size: 12px;
+    font-weight: bold;
+    font-family: "Vazir";
+    text-align: center;
+  }
+  
+  #menu_checkbox:checked + #menu_label:before {
+    left: -39px;
+  }
+  
+  #menu_checkbox:checked + #menu_label:after {
+    left: 39px;
+  }
+  
+  #menu_checkbox:checked + #menu_label #menu_text_bar:before {
+    animation: moveUpThenDown 0.8s ease 0.2s forwards,
+      shakeWhileMovingUp 0.8s ease 0.2s forwards,
+      shakeWhileMovingDown 0.2s ease 0.8s forwards;
+  }
+
+  .navbar-toggler:focus {
+    outline: none;
+    box-shadow: none;
+    }
+  
+  
+  @keyframes moveUpThenDown {
+    0% {
+      top: 0;
+    }
+    50% {
+      top: -27px;
+    }
+    100% {
+      top: -14px;
+    }
+  }
+  
+  @keyframes shakeWhileMovingUp {
+    0% {
+      transform: rotateZ(0);
+    }
+    25% {
+      transform: rotateZ(-10deg);
+    }
+    50% {
+      transform: rotateZ(0deg);
+    }
+    75% {
+      transform: rotateZ(10deg);
+    }
+    100% {
+      transform: rotateZ(0);
+    }
+  }
+  
+  @keyframes shakeWhileMovingDown {
+    0% {
+      transform: rotateZ(0);
+    }
+    80% {
+      transform: rotateZ(3deg);
+    }
+    90% {
+      transform: rotateZ(-3deg);
+    }
+    100% {
+      transform: rotateZ(0);
+    }
+  }
+  
+  
