--- a/assets/main.css
+++ b/assets/main.css
@@ -5,7 +5,7 @@
   font-family: "Vazir";
 }
 body {
-    overflow-x: hidden;
+  overflow-x: hidden;
 }
 
 /* Mobile Screen */
@@ -13,8 +13,6 @@ body {
   .vertical-line {
     display: none;
   }
-  
-  
 }
 /* Variables */
 :root {
@@ -30,14 +28,16 @@ body {
   height: 50px;
 }
 .navbar-btns {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 300px;
-  }
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 300px;
+}
 .costume-nav {
-  background-color: var(--clr-primary);
+  background-color: #fff;
   position: relative;
+  box-shadow: 0 1px 5px rgb(206, 202, 200),
+  0 2px 5px rgb(58, 62, 61);
 }
 .costume-nav li a {
   position: relative;
@@ -164,129 +164,134 @@ body {
   transition: all ease 0.4s;
 }
 
-
 /* Hamburger menu */
-
+.navbar-toggler:focus {
+  outline: none;
+  box-shadow: none;
+}
 #menu_button {
-    width: 39px;
-    overflow: hidden;
-  }
-  
-  #menu_checkbox {
-    display: none;
-  }
-  
-  #menu_label {
-    position: relative;
-    display: block;
-    height: 29px;
-    cursor: pointer;
-  }
-  
-  #menu_label:before,
-  #menu_label:after,
-  #menu_text_bar {
-    position: absolute;
-    left: 0;
-    width: 100%;
-    height: 5px;
-    background-color: var(--clr-dark);
-  }
-  
-  #menu_label:before,
-  #menu_label:after {
-    content: "";
-    transition: 0.4s cubic-bezier(0.68, -0.55, 0.27, 1.55) left;
-  }
-  
-  #menu_label:before {
+  width: 39px;
+  overflow: hidden;
+}
+
+#menu_checkbox {
+  display: none;
+}
+
+#menu_label {
+  position: relative;
+  display: block;
+  height: 29px;
+  cursor: pointer;
+}
+
+#menu_label:before,
+#menu_label:after,
+#menu_text_bar {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 5px;
+  background-color: var(--clr-dark);
+}
+
+#menu_label:before,
+#menu_label:after {
+  content: "";
+  transition: 0.4s cubic-bezier(0.68, -0.55, 0.27, 1.55) left;
+}
+
+#menu_label:before {
+  top: 0;
+}
+
+#menu_label:after {
+  top: 12px;
+}
+
+#menu_text_bar {
+  top: 24px;
+}
+
+#menu_text_bar:before {
+  content: "منو";
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  color: var(--clr-dark);
+  font-size: 12px;
+  font-weight: bold;
+  font-family: "Vazir";
+  text-align: center;
+}
+
+#menu_checkbox:checked + #menu_label:before {
+  left: -39px;
+}
+
+#menu_checkbox:checked + #menu_label:after {
+  left: 39px;
+}
+
+#menu_checkbox:checked + #menu_label #menu_text_bar:before {
+  animation: moveUpThenDown 0.8s ease 0.2s forwards,
+    shakeWhileMovingUp 0.8s ease 0.2s forwards,
+    shakeWhileMovingDown 0.2s ease 0.8s forwards;
+}
+
+@keyframes moveUpThenDown {
+  0% {
     top: 0;
   }
-  
-  #menu_label:after {
-    top: 12px;
+  50% {
+    top: -27px;
   }
-  
-  #menu_text_bar {
-    top: 24px;
+  100% {
+    top: -14px;
   }
-  
-  #menu_text_bar:before {
-    content: "منو";
-    position: absolute;
-    top: 5px;
-    right: 0;
-    left: 0;
-    color: var(--clr-dark);
-    font-size: 12px;
-    font-weight: bold;
-    font-family: "Vazir";
-    text-align: center;
-  }
-  
-  #menu_checkbox:checked + #menu_label:before {
-    left: -39px;
-  }
-  
-  #menu_checkbox:checked + #menu_label:after {
-    left: 39px;
-  }
-  
-  #menu_checkbox:checked + #menu_label #menu_text_bar:before {
-    animation: moveUpThenDown 0.8s ease 0.2s forwards,
-      shakeWhileMovingUp 0.8s ease 0.2s forwards,
-      shakeWhileMovingDown 0.2s ease 0.8s forwards;
-  }
+}
 
-  .navbar-toggler:focus {
-    outline: none;
-    box-shadow: none;
-    }
-  
-  
-  @keyframes moveUpThenDown {
-    0% {
-      top: 0;
-    }
-    50% {
-      top: -27px;
-    }
-    100% {
-      top: -14px;
-    }
+@keyframes shakeWhileMovingUp {
+  0% {
+    transform: rotateZ(0);
   }
-  
-  @keyframes shakeWhileMovingUp {
-    0% {
-      transform: rotateZ(0);
-    }
-    25% {
-      transform: rotateZ(-10deg);
-    }
-    50% {
-      transform: rotateZ(0deg);
-    }
-    75% {
-      transform: rotateZ(10deg);
-    }
-    100% {
-      transform: rotateZ(0);
-    }
+  25% {
+    transform: rotateZ(-10deg);
   }
-  
-  @keyframes shakeWhileMovingDown {
-    0% {
-      transform: rotateZ(0);
-    }
-    80% {
-      transform: rotateZ(3deg);
-    }
-    90% {
-      transform: rotateZ(-3deg);
-    }
-    100% {
-      transform: rotateZ(0);
-    }
+  50% {
+    transform: rotateZ(0deg);
   }
-  
-  
+  75% {
+    transform: rotateZ(10deg);
+  }
+  100% {
+    transform: rotateZ(0);
+  }
+}
+
+@keyframes shakeWhileMovingDown {
+  0% {
+    transform: rotateZ(0);
+  }
+  80% {
+    transform: rotateZ(3deg);
+  }
+  90% {
+    transform: rotateZ(-3deg);
+  }
+  100% {
+    transform: rotateZ(0);
+  }
+}
+
+
+/* Banner Section */
+.banner-section {
+    background-color: var(--clr-primary);
+}
+.banner {
+    background-color: var(--clr-secondary);
+background-image: linear-gradient(315deg, var(--clr-secondary) 0%, var(--clr-accent) 74%);
+height: 50vh;
+}
