--- a/assets/main.css
+++ b/assets/main.css
@@ -6,6 +6,7 @@
 }
 body {
   overflow-x: hidden;
+  background-color: var(--clr-primary);
 }
 /* Variables */
 :root {
@@ -306,7 +307,7 @@ body {
 }
 
 /* Banner Section */
-.banner-section {
+.main-section {
   background-color: var(--clr-primary);
   position: relative;
   display: flex;
@@ -350,75 +351,98 @@ body {
 
 .quick-form input,
 .quick-form select {
-    padding: 0.4rem;
-    border: 1px solid rgba(58, 62, 61, 0.548);
-    border-radius: 0.3rem;
+  padding: 0.4rem;
+  border: 1px solid rgba(58, 62, 61, 0.548);
+  border-radius: 0.3rem;
 }
 
 /* Card Section */
 .cards-box {
-    display: flex;
-    justify-content: center;
-    margin-top: 3rem;
-    text-align: center;
+  display: flex;
+  justify-content: center;
+  margin-top: 3rem;
+  text-align: center;
 }
 .cards {
-    perspective: 150rem;
-    position: relative;
-    height: 20rem;
-    max-width: 400px;
-    box-shadow: none;
-    background: none;
-    cursor: pointer;
-  }
-  
-  .card-side {
-    height: 20rem;
-    border-radius: 0.3rem;
-    transition: all 0.8s ease;
-    backface-visibility: hidden;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    padding:2rem;
-    color: white;
-  }
-  
-  .card-side.back {
-    transform: rotateY(-180deg);
-    background-color: var(--clr-accent);
-    color: var(--clr-dark);
-  }
-  
-  .card-side.front {
-    background-color: var(--clr-secondary);
-  }
-  
-  .cards:hover .card-side.front {
-    transform: rotateY(180deg);
-  }
-  
-  .cards:hover .card-side.back {
-    transform: rotateY(0deg);
-  }
+  perspective: 150rem;
+  position: relative;
+  height: 20rem;
+  max-width: 400px;
+  box-shadow: none;
+  background: none;
+  cursor: pointer;
+}
 
-  /* Scroll Bar */
-  /* width */
+.card-side {
+  height: 20rem;
+  border-radius: 0.3rem;
+  transition: all 0.8s ease;
+  backface-visibility: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 2rem;
+  color: white;
+}
+
+.card-side.back {
+  transform: rotateY(-180deg);
+  background-color: var(--clr-accent);
+  color: var(--clr-dark);
+}
+
+.card-side.front {
+  background-color: var(--clr-secondary);
+}
+
+.cards:hover .card-side.front {
+  transform: rotateY(180deg);
+}
+
+.cards:hover .card-side.back {
+  transform: rotateY(0deg);
+}
+
+/* About Section */
+.about-section p{
+  text-align: justify;
+}
+
+/* Company Video */
+.h_iframe-aparat_embed_frame {
+  position: relative;
+}
+.h_iframe-aparat_embed_frame .ratio {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+.h_iframe-aparat_embed_frame iframe {
+  border-radius: 0.3rem;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+/* Scroll Bar */
+/* width */
 ::-webkit-scrollbar {
   width: 0;
 }
 /* button */
 ::-webkit-scrollbar-button {
-  background: var(--clr-primary); 
+  background: var(--clr-primary);
 }
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: var(--clr-secondary); 
+  background: var(--clr-secondary);
 }
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: var(--clr-dark); 
+  background: var(--clr-dark);
 }
 /* Track */
 ::-webkit-scrollbar-track {
@@ -430,34 +454,39 @@ body {
 }
 /* Corner */
 ::-webkit-scrollbar-corner {
-  background: var(--clr-dark); 
+  background: var(--clr-dark);
 }
 /* Resizer */
 ::-webkit-resizer {
-  background: var(--clr-dark); 
+  background: var(--clr-dark);
 }
 
 /* Mobile Screen */
 @media only screen and (min-width: 200px) and (max-width: 991px) {
-    .vertical-line {
-      display: none;
-    }
-    .quick-service-box {
-        width: 100%;
-        border-radius: 5rem;
-    }
-    .quick-form{
-      display: flex;
-      flex-direction: column;
-    }
-    .quick-form label,
-    .quick-form input,
-    .quick-form select {
-       width: 100%;
-       margin-top: 0.7rem;
-    }
-    .quick-form a {
-        margin-top: 0.7rem;
-    }
-    
+  .vertical-line {
+    display: none;
   }
+  .quick-service-box {
+    width: 100%;
+    border-radius: 5rem;
+  }
+  .quick-form {
+    display: flex;
+    flex-direction: column;
+  }
+  .quick-form label,
+  .quick-form input,
+  .quick-form select {
+    width: 100%;
+    margin-top: 0.7rem;
+  }
+  .quick-form a {
+    margin-top: 0.7rem;
+  }
+  .cards {
+    margin-top: 1rem;
+  }
+  .about-section h3 {
+    text-align: center;
+  }
+}
