--- a/assets/main.css
+++ b/assets/main.css
@@ -103,6 +103,15 @@ body {
   background-color: rgba(0, 0, 0, 0.473);
   margin-top: 1rem;
 }
+.horizontal-line2 {
+  display: flex;
+  justify-content: center;
+  width: 50%;
+  height: 0.1rem;
+  border-radius: 3rem;
+  background-color: rgba(0, 0, 0, 0.473);
+  margin: 1rem 0;
+}
 
 /* Sign Up Button */
 .btn {
@@ -405,7 +414,7 @@ body {
 }
 
 /* About Section */
-.about-section p{
+.about-section p {
   text-align: justify;
 }
 
@@ -427,6 +436,36 @@ body {
   width: 100%;
   height: 100%;
 }
+
+/* Numbers */
+article {
+  background: var(--clr-primary);
+  padding: 1rem 2rem;
+  border-bottom: 4px solid transparent;
+  text-align: center;
+}
+
+article span {
+  font-size: 4rem;
+  font-weight: 700;
+  line-height: 1.25;
+}
+
+article p {
+  margin: 0;
+  text-transform: capitalize;
+  font-size: 1.5rem;
+}
+.hour-number {
+  border-bottom-color: rgb(0, 93, 131);
+}
+.costumer-number {
+  border-bottom-color: rgb(233, 195, 30);
+}
+.project-number {
+  border-bottom-color: rgb(58, 62, 61);
+}
+
 /* Scroll Bar */
 /* width */
 ::-webkit-scrollbar {
@@ -488,5 +527,13 @@ body {
   }
   .about-section h3 {
     text-align: center;
+  }
+  .horizontal-line2 {
+    margin: 1rem auto;
+  }
+  .hour-number,
+  .costumer-number,
+  .project-number {
+    margin-top: 1rem;
   }
 }
