--- a/assets/main.css
+++ b/assets/main.css
@@ -8,14 +8,14 @@ body {
   overflow-x: hidden;
   background-color: var(--clr-primary);
 }
-/* Variables */
+/* Variables ----------------------------------------------------------------- */
 :root {
   --clr-primary: #f6f6f6;
   --clr-secondary: rgb(0, 93, 131);
   --clr-accent: rgb(233, 195, 30);
   --clr-dark: rgb(58, 62, 61);
 }
-/* Scroll Bar */
+/* Scroll Bar ---------------------------------------------------------------------- */
 #scroll-progress {
   position: fixed;
   top: 0;
@@ -30,7 +30,7 @@ body {
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
 
-/* Navbar */
+/* Navbar ------------------------------------------------------------------------ */
 .navbar-brand {
   width: 140px;
   height: 50px;
@@ -83,7 +83,7 @@ body {
   transform: scale(1);
 }
 
-/* Navbar Vertical Line */
+/* Navbar Vertical Line --------------------------------------------------- */
 .vertical-line {
   width: 1rem;
   height: 0.1rem;
@@ -92,7 +92,7 @@ body {
   margin-top: 1rem;
 }
 
-/* Horizontal Line */
+/* Horizontal Line ----------------------------------------------------------- */
 .horizontal-line {
   display: flex;
   justify-content: center;
@@ -113,7 +113,7 @@ body {
   margin: 1rem 0;
 }
 
-/* Sign Up Button */
+/* Sign Up Button  -----------------------------------------------------------------*/
 .btn {
   letter-spacing: 0.1em;
   cursor: pointer;
@@ -170,7 +170,7 @@ body {
   transform: translateY(0) scale(1, 1);
 }
 
-/* Main Button */
+/* Main Button --------------------------------------------------- */
 
 .primary-btn {
   background-color: var(--clr-secondary);
@@ -194,7 +194,7 @@ body {
   transition: all ease 0.4s;
 }
 
-/* Hamburger menu */
+/* Hamburger menu --------------------------------------------------- */
 .navbar-toggler:focus {
   outline: none;
   box-shadow: none;
@@ -315,7 +315,7 @@ body {
   }
 }
 
-/* Banner Section */
+/* Banner Section ---------------------------------------------------- */
 .main-section {
   background-color: var(--clr-primary);
   position: relative;
@@ -332,7 +332,7 @@ body {
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
 
-/* Service Section */
+/* Service Section -------------------------------------------------------- */
 .quick-service-box h3 {
   text-align: center;
   color: var(--clr-dark);
@@ -365,7 +365,7 @@ body {
   border-radius: 0.3rem;
 }
 
-/* Card Section */
+/* Card Section -------------------------------------------------------- */
 .cards-box {
   display: flex;
   justify-content: center;
@@ -413,12 +413,12 @@ body {
   transform: rotateY(0deg);
 }
 
-/* About Section */
+/* About Section ----------------------------------------------------- */
 .about-section p {
   text-align: justify;
 }
 
-/* Company Video */
+/* Company Video --------------------------------------------- */
 .h_iframe-aparat_embed_frame {
   position: relative;
 }
@@ -437,7 +437,7 @@ body {
   height: 100%;
 }
 
-/* Numbers */
+/* Numbers ------------------------------------------------------------ */
 article {
   background: var(--clr-primary);
   padding: 1rem 2rem;
@@ -466,7 +466,7 @@ article p {
   border-bottom-color: rgb(58, 62, 61);
 }
 
-/* Scroll Bar */
+/* Scroll Bar ----------------------------------------------------------- */
 /* width */
 ::-webkit-scrollbar {
   width: 0;
@@ -500,7 +500,7 @@ article p {
   background: var(--clr-dark);
 }
 
-/* Mobile Screen */
+/* Mobile Screen --------------------------------------------------- */
 @media only screen and (min-width: 200px) and (max-width: 991px) {
   .vertical-line {
     display: none;
