--- a/assets/main.css
+++ b/assets/main.css
@@ -8,6 +8,9 @@ body {
   overflow-x: hidden;
   background-color: var(--clr-primary);
 }
+h1,h2,h3,h4,h5,h6,p {
+  user-select: none;
+}
 /* Variables ----------------------------------------------------------------- */
 :root {
   --clr-primary: #f6f6f6;
@@ -472,6 +475,105 @@ article p {
     height: 5rem;
 }
 
+/* Footer --------------------------------------------------------------------*/
+.footer {
+  background-color: var(--clr-dark);
+  color: var(--clr-primary);
+  padding: 0.7rem;
+  margin-top: 3rem;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px -3px 6px, rgba(0, 0, 0, 0.23) 0px -3px 6px;
+}
+.footer-logo {
+  width: 220px;
+  height: 100px;
+  filter: drop-shadow(0 1px 1px var(--clr-primary));
+}
+.footer-links ul,
+.footer-contact ul {
+  list-style: none;
+}
+.footer-links span {
+  font-size: 1.2rem;
+  color: #fff;
+}
+.footer-links i {
+  color: var(--clr-primary);
+}
+.footer-links a {
+  text-decoration: none;
+  color: var(--clr-primary);
+  line-height: 2.2rem;
+  display: flex;
+  align-items: center;
+}
+.footer-links a:hover {
+  color: var(--clr-accent);
+}
+.footer-links a:hover i {
+  color: var(--clr-secondary);
+}
+.footer-links li:hover {
+  transform: translateX(-7px);
+  transition: all ease 0.3s;
+}
+.footer-line {
+  background-color: var(--clr-secondary);
+  padding: 1px;
+  margin: 1rem 0;
+  position: relative;
+}
+.footer-line span {
+  position: absolute;
+  right: 0;
+  background-color: var(--clr-accent);
+  padding: 1px;
+  width: 70px;
+}
+.footer-contact i {
+  font-size: 2rem;
+  color: #fff;
+  margin-left: 1rem;
+}
+.footer-contact a {
+  color: var(--clr-primary);
+  text-decoration: none;
+}
+.footer-contact a:hover {
+  color: var(--clr-accent);
+}
+.footer-contact li {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  line-height: 3rem;
+}
+.e-namad {
+  width: 120px;
+  height: 100px;
+}
+.footer-social-icons {
+  margin-top: 0.5rem;
+}
+.footer-social-icons .bxl-instagram,
+.footer-social-icons .bxl-whatsapp,
+.footer-social-icons .bxl-linkedin,
+.footer-social-icons .bxl-youtube {
+  padding-bottom: 0.1rem;
+  border-bottom: 2px solid var(--clr-primary);
+}
+.bxl-instagram:hover {
+  color: #EA5A47;
+}
+.bxl-whatsapp:hover {
+  color: #26D367;
+}
+.bxl-linkedin:hover {
+  color: #0A66C2;
+}
+.bxl-youtube:hover {
+  color: #FF0000;
+}
 
 /* Scroll Bar ----------------------------------------------------------- */
 /* width */
