--- a/assets/main.css
+++ b/assets/main.css
@@ -78,11 +78,11 @@ font-family: "Vazir";
   height: 100%;
   bottom: 0;
   left: 0;
-  border-radius: 0.3rem;
+  border-radius: 0.5rem;
   background-color: var(--clr-secondary);
   z-index: -1;
   transform: scale(0);
-  transition: transform 0.4s ease-in-out;
+  transition: transform 0.3s ease-in-out;
 }
 
 .costume-nav li a:hover:before,
@@ -126,7 +126,7 @@ font-family: "Vazir";
   cursor: pointer;
   font-size: 14px;
   font-weight: 600;
-  line-height: 30px;
+  line-height: 35px;
   max-width: 130px;
   position: relative;
   text-decoration: none;
@@ -135,6 +135,8 @@ font-family: "Vazir";
   display: flex;
   align-items: center;
   justify-content: center;
+  border-radius: 0.5rem;
+  box-shadow: 0 0 3px rgb(58, 62, 61, 0.5);
 }
 .btn i {
   font-size: 1.1rem;
@@ -193,9 +195,9 @@ font-family: "Vazir";
   cursor: pointer;
   font-size: 14px;
   font-weight: 600;
-  /* line-height: 44px; */
+  line-height: 29px;
   padding: 0.7em 1rem;
-  border-radius: 4px;
+  border-radius: 0.5rem;
   position: relative;
   text-decoration: none;
   text-transform: uppercase;
@@ -339,7 +341,7 @@ font-family: "Vazir";
   align-items: center;
 }
 .banner {
-  background-image: url("./img/banner2.jpg");
+  background-image: url("./img/orginal-banner.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -414,7 +416,14 @@ font-family: "Vazir";
   height: 100%;
 }
 .quick-service-icons li:hover {
-  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.164);
+  /* text-shadow: 0 1px 1px rgba(0, 0, 0, 0.164); */
+  background-color: var(--clr-primary);
+}
+.quick-service-icons li:nth-child(1):hover {
+  border-radius: 0 1.5rem 0 0;
+}
+.quick-service-icons li:nth-child(5):hover {
+  border-radius: 1.5rem 0 0 0;
 }
 .quick-service-icons li:nth-child(1){
   border: none;
@@ -427,7 +436,7 @@ font-family: "Vazir";
   -webkit-text-fill-color: transparent;
   background-color: var(--clr-secondary);
   background-image: linear-gradient(315deg, rgb(233, 195, 30) 0%, rgb(0, 93, 131) 74%);
-  border-bottom-color: var(--clr-secondary);
+  border-bottom-color: var(--clr-accent);
   transition: ease 0.5s;
 }
 
@@ -494,7 +503,7 @@ font-family: "Vazir";
   height: auto;
 }
 .h_iframe-aparat_embed_frame iframe {
-  border-radius: 0.3rem;
+  border-radius: 1.3rem;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
   position: absolute;
   top: 0;
@@ -559,7 +568,6 @@ footer p span {
 .footer-logo {
   width: 220px;
   height: 100px;
-  filter: drop-shadow(0 1px 1px var(--clr-primary));
   display: flex;
   justify-content: center;
   margin: auto;
@@ -654,6 +662,65 @@ footer p span {
   color: #FF0000;
 }
 
+/* Owl Carousel ------------------------------------------------*/
+.carousel-banner {
+  color: var(--clr-primary);
+  margin: 0 1.5rem;
+  border-radius: 1.3rem;
+}
+.carousel-banner img {
+  border-radius: 1.3rem;
+}
+.owl-theme .owl-dots .owl-dot span{
+  width:15px;
+  height:10px;
+  margin:1.5rem 7px;
+  background: var(--clr-dark) !important;
+  display:block;
+  -webkit-backface-visibility:visible;
+  -webkit-transition:opacity 200ms ease;
+  -moz-transition:opacity 200ms ease;
+  -ms-transition:opacity 200ms ease;
+  -o-transition:opacity 200ms ease;
+  transition:opacity 200ms ease;
+  -webkit-border-radius:30px;
+  -moz-border-radius:30px;
+  border-radius:30px;
+}
+
+.owl-theme .owl-dots .owl-dot.active span {
+  box-shadow: 0 0 3px var(--clr-dark);
+  background: var(--clr-accent) !important;
+}
+.owl img{
+  width: 100px !important;
+  height: 80px;
+  filter:  brightness(25%);
+  margin: auto;
+}
+.owl i{
+  margin: 1.5rem 0.5rem 0 0.5rem;
+  font-size: 1.5rem;
+  color: var(--clr-dark);
+}
+.owl i:hover {
+  color: var(--clr-primary);
+  text-shadow: 0 0 3px var(--clr-dark);
+}
+.owl-nav button {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+}
+
+.owl-prev {
+  right: -25px;
+}
+
+.owl-next {
+  left: -25px;
+}
+
 /* Scroll Bar ----------------------------------------------------------- */
 /* width */
 ::-webkit-scrollbar {
@@ -715,6 +782,12 @@ footer p span {
   }
   .about-section h3 {
     text-align: center;
+  }
+  .why-order-online-section h3 {
+    text-align: center;
+  }
+  hr {
+    margin: 1rem auto;
   }
   .horizontal-line2 {
     margin: 1rem auto;
