--- a/assets/main.css
+++ b/assets/main.css
@@ -36,6 +36,49 @@ font-family: "Vazir";
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 } */
 
+/* Mobile Bottom Navbar ---------------------------------------------*/
+.nav {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 55px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px -3px 6px, rgba(0, 0, 0, 0.23) 0px -3px 6px;
+  background-color: var(--clr-primary);
+  display: none;
+  overflow-x: auto;
+  z-index: 50000;
+}
+
+.nav__link {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-grow: 1;
+  min-width: 50px;
+  overflow: hidden;
+  white-space: nowrap;
+  font-family: sans-serif;
+  font-size: 13px;
+  color: var(--clr-dark);
+  text-decoration: none;
+  -webkit-tap-highlight-color: transparent;
+  transition: background-color 0.1s ease-in-out;
+}
+
+.nav__link:hover {
+  background-color: var(--clr-primary);
+}
+
+.nav__link--active {
+  color: var(--clr-secondary);
+}
+
+.nav__icon {
+  font-size: 2rem;
+}
+
+
 /* Navbar ------------------------------------------------------------------------ */
 .navbar-brand {
   width: 140px;
@@ -636,8 +679,15 @@ footer p span {
   line-height: 3rem;
 }
 .e-namad {
-  width: 120px;
+  background-color: #fff;
+  width: 100px;
   height: 100px;
+  border-radius: 1.3rem;
+  cursor: pointer;
+  border: 2px solid var(--clr-secondary);
+}
+.e-namad:nth-child(1) {
+  margin-left: 1rem;
 }
 .footer-social-icons {
   margin-top: 0.6rem;
@@ -783,7 +833,13 @@ footer p span {
   .about-section h3 {
     text-align: center;
   }
+  .about-section p {
+    text-align: center;
+  }
   .why-order-online-section h3 {
+    text-align: center;
+  }
+  .why-order-online-section p {
     text-align: center;
   }
   hr {
@@ -800,5 +856,17 @@ footer p span {
   .footer p {
     font-size: 0.7rem;
     text-align: center;
+  }
+  .quick-service-icons a {
+    font-size: 0.5rem;
+  }
+  .quick-service-icons i {
+    font-size: 1.3rem;
+  }
+  .nav {
+    display: flex;
+  }
+  .footer {
+    margin-bottom: 3rem;
   }
 }
