--- a/assets/main.css
+++ b/assets/main.css
@@ -42,7 +42,7 @@ font-family: "Vazir";
   bottom: 0;
   width: 100%;
   height: 55px;
-  box-shadow: rgba(0, 0, 0, 0.16) 0px -3px 6px, rgba(0, 0, 0, 0.23) 0px -3px 6px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px -2px 3px, rgba(0, 0, 0, 0.23) 0px -2px 3px;
   background-color: var(--clr-primary);
   display: none;
   overflow-x: hidden;
@@ -53,13 +53,12 @@ font-family: "Vazir";
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: center;
   flex-grow: 1;
   min-width: 50px;
   overflow: hidden;
   white-space: nowrap;
-  font-family: sans-serif;
-  font-size: 13px;
+  font-size: 11px;
   color: var(--clr-dark);
   text-decoration: none;
   -webkit-tap-highlight-color: transparent;
@@ -67,7 +66,7 @@ font-family: "Vazir";
 }
 
 .nav__link:hover {
-  background-color: var(--clr-primary);
+  color: var(--clr-dark);
 }
 
 .nav__link--active {
@@ -75,7 +74,7 @@ font-family: "Vazir";
 }
 
 .nav__icon {
-  font-size: 2rem;
+  font-size: 1.5rem;
 }
 
 
@@ -746,9 +745,9 @@ footer p span {
   background: var(--clr-accent) !important;
 }
 .owl img{
-  width: 100px !important;
+  /* width: 100px !important;
   height: 80px;
-  filter:  brightness(25%);
+  filter:  brightness(25%); */
   margin: auto;
 }
 .owl i{
@@ -857,7 +856,7 @@ footer p span {
     margin-top: 1rem;
   }
   .footer p {
-    font-size: 0.7rem;
+    font-size: 0.6rem;
     text-align: center;
   }
   .quick-service-icons a {
