added service icons

--- a/assets/main.css
+++ b/assets/main.css
@@ -2,17 +2,28 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Iranian Sans';
+  font-family: "Iranian Sans";
 }
 body {
   overflow-x: hidden;
   background-color: var(--clr-primary);
 }
-h1,h2,h3,h4,h5,h6,p {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
   user-select: none;
 }
-h1,h2,h3,h4,h5,h6 {
-font-family: "Vazir";
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Vazir";
 }
 /* Variables ----------------------------------------------------------------- */
 :root {
@@ -76,7 +87,6 @@ font-family: "Vazir";
 .nav__icon {
   font-size: 1.5rem;
 }
-
 
 /* Navbar ------------------------------------------------------------------------ */
 .navbar-brand {
@@ -435,7 +445,7 @@ font-family: "Vazir";
   justify-content: space-evenly;
   align-items: center;
   padding: 1rem;
-  border:  1px solid rgba(0, 0, 0, 0.267);
+  border: 1px solid rgba(0, 0, 0, 0.267);
   border-radius: 3rem 3rem 0 0;
   margin-top: 1rem;
   list-style: none;
@@ -445,12 +455,12 @@ font-family: "Vazir";
   flex-direction: column;
   align-items: center;
   justify-content: center;
-   text-decoration: none;
-   color: var(--clr-dark);
-   border-bottom: 3px solid transparent;
-   font-weight: 900;
-   padding-bottom: 5px;
-   border-radius: 0 0 3px 3px;
+  text-decoration: none;
+  color: var(--clr-dark);
+  border-bottom: 3px solid transparent;
+  font-weight: 900;
+  padding-bottom: 5px;
+  border-radius: 0 0 3px 3px;
 }
 .quick-service-icons li {
   border-right: 1px solid black;
@@ -467,20 +477,56 @@ font-family: "Vazir";
 .quick-service-icons li:nth-child(5):hover {
   border-radius: 1.5rem 0 0 0;
 }
-.quick-service-icons li:nth-child(1){
+.quick-service-icons li:nth-child(1) {
   border: none;
 }
-.quick-service-icons  i {
+.quick-service-icons i {
   font-size: 2.5rem;
 }
 .quick-service-icons a:hover {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-color: var(--clr-secondary);
-  background-image: linear-gradient(315deg, rgb(233, 195, 30) 0%, rgb(0, 93, 131) 74%);
+  background-image: linear-gradient(
+    315deg,
+    rgb(233, 195, 30) 0%,
+    rgb(0, 93, 131) 74%
+  );
   border-bottom-color: var(--clr-accent);
   transition: ease 0.5s;
 }
+.service-icons-mobile {
+  display: none;
+  padding: 0;
+}
+.service-icons-mobile ul {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 0.7rem;
+  list-style: none;
+  background-color: #fff;
+  /* border-radius: 1.3rem; */
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+  margin: 0 ;
+}
+.service-icons-mobile a {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  color: var(--clr-dark);
+  font-size: 1.5rem;
+}
+.service-icons-mobile a:hover {
+  color: var(--clr-secondary);
+}
+.service-icons-mobile li {
+  width: 100%;
+  height: 100%;
+}
+
 
 /* Card Section -------------------------------------------------------- */
 .cards-box {
@@ -584,12 +630,12 @@ article p {
 }
 
 /* Brands Logo --------------------------------------------------------- */
-.brands-logo img{
-    width: 5rem;
-    height: 5rem;
+.brands-logo img {
+  width: 5rem;
+  height: 5rem;
 }
 .company-brands {
-   margin-top: 7rem;
+  margin-top: 7rem;
 }
 
 /* Footer --------------------------------------------------------------------*/
@@ -699,19 +745,17 @@ footer p span {
   border-bottom: 2px solid var(--clr-primary);
 }
 .bxl-instagram:hover {
-  color: #EA5A47;
+  color: #ea5a47;
 }
 .bxl-whatsapp:hover {
-  color: #26D367;
+  color: #26d367;
 }
 .bxl-linkedin:hover {
-  color: #0A66C2;
+  color: #0a66c2;
 }
 .bxl-youtube:hover {
-  color: #FF0000;
+  color: #ff0000;
 }
-
-
 
 /* Owl Carousel ------------------------------------------------*/
 .carousel-banner {
@@ -725,34 +769,34 @@ footer p span {
 .carousel-banner img {
   border-radius: 1.3rem;
 }
-.owl-theme .owl-dots .owl-dot span{
-  width:15px;
-  height:10px;
-  margin:1.5rem 7px;
+.owl-theme .owl-dots .owl-dot span {
+  width: 15px;
+  height: 10px;
+  margin: 1.5rem 7px;
   background: var(--clr-dark) !important;
-  display:block;
-  -webkit-backface-visibility:visible;
-  -webkit-transition:opacity 200ms ease;
-  -moz-transition:opacity 200ms ease;
-  -ms-transition:opacity 200ms ease;
-  -o-transition:opacity 200ms ease;
-  transition:opacity 200ms ease;
-  -webkit-border-radius:30px;
-  -moz-border-radius:30px;
-  border-radius:30px;
+  display: block;
+  -webkit-backface-visibility: visible;
+  -webkit-transition: opacity 200ms ease;
+  -moz-transition: opacity 200ms ease;
+  -ms-transition: opacity 200ms ease;
+  -o-transition: opacity 200ms ease;
+  transition: opacity 200ms ease;
+  -webkit-border-radius: 30px;
+  -moz-border-radius: 30px;
+  border-radius: 30px;
 }
 
 .owl-theme .owl-dots .owl-dot.active span {
   box-shadow: 0 0 3px var(--clr-dark);
   background: var(--clr-accent) !important;
 }
-.owl img{
+.owl img {
   /* width: 100px !important;
   height: 80px;
   filter:  brightness(25%); */
   margin: auto;
 }
-.owl i{
+.owl i {
   margin: 1.5rem 0.5rem 0 0.5rem;
   font-size: 1.5rem;
   color: var(--clr-dark);
@@ -817,6 +861,16 @@ footer p span {
   .quick-service-box {
     width: 100%;
     border-radius: 1.3rem;
+    margin-top: -16rem;
+  }
+  .service-icons-mobile {
+    position: fixed;
+    top: 0;
+    z-index: 50000;
+  }
+  .service-icons-mobile-bg {
+    z-index: 40000;
+    background-position: top;
   }
   .quick-form {
     display: flex;
@@ -888,29 +942,32 @@ footer p span {
   .collapsible-trigger {
     cursor: pointer;
   }
-  
-  .collapse-active, .collapsible-trigger:hover {
-    color: var(--clr-accent);
+
+  .collapse-active,
+  .collapsible-trigger:hover {
+    color: var(--clr-primary);
   }
-  
+
   .collapsible-trigger:after {
-    font-family: "Font Awesome 5 Free"; 
-    content: '\f103';
+    font-family: "Font Awesome 5 Free";
+    content: "\f103";
     color: var(--clr-accent);
     font-weight: bold;
     float: right;
     margin-left: 5px;
   }
-  
+
   .collapse-active:after {
     content: "\f102";
     color: var(--clr-secondary);
   }
-  
+
   .content-collapse {
     max-height: 0;
     overflow: hidden;
     transition: max-height 0.2s ease-out;
   }
-  
+}
+/* Tablet Screen -----------------------------------------------*/
+@media only screen and (min-width: 768px) and (max-width: 991px) {
 }
