fixed some height issues

--- a/assets/main.css
+++ b/assets/main.css
@@ -885,8 +885,8 @@ footer p span {
   .quick-form a {
     margin-top: 0.7rem;
   }
-  .cards {
-    margin-top: 1rem;
+  .main-banners {
+    margin-top: 4rem;
   }
   .about-section h3 {
     text-align: center;
