--- a/assets/main.css
+++ b/assets/main.css
@@ -3,7 +3,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Iranian Sans';
-   font-weight: normal;
+   font-weight: 500;
    font-style: normal;
 }
 body {
